# huffman_codes

./: .gitignore  App  CMakeLists.txt  README.md  bit_array.cpp  huffman.cpp
headers/: App.h  Compare.h  Debug.h  Huffman.h  TreeNode.h
lib/: BitArray.cpp  BitArray.h
source/: App.cpp  Compare.cpp  Debug.cpp  Huffman.cpp  TreeNode.cpp  huffman.cpp
